# typr-beta

backend/: .env.example  main.py  pyproject.toml
backend/app/: main.py
backend/app/api/v1/endpoints/: users.py
backend/app/core/: config.py
backend/app/crud/: user.py
backend/app/db/: session.py
backend/app/schemas/: user.py
